small spacing fix

--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -15,6 +15,7 @@
 .logo img {
   width: 40px;
   height: 40px;
+  margin-top: 1rem;
 }
 
 .nav ul {
